# kwin-lowlatency

./: CMakeLists.txt  HACKING.md  README.md  TODO.md  client.cpp  client.h  composite.cpp  composite.h  deleted.cpp  deleted.h  effects.cpp  events.cpp  geometry.cpp  inputpanelv1client.h  internal_client.cpp  internal_client.h  kwin.kcfg  layers.cpp  layershellv1client.h  main_x11.cpp  options.cpp  options.h  patch.sh  po.sh  rules.cpp  rules.h  rulesettings.kcfg  scene.cpp  scene.h  shell_client.cpp  shell_client.h  toplevel.cpp  toplevel.h  tva.md  unmanaged.cpp  unmanaged.h  unredirect.md  wayStart  workspace.cpp  workspace.h  (+4 more)
autotests/: CMakeLists.txt
colorcorrection/: clockskewnotifierengine_linux.cpp
debian/: changelog  control  copyright  kwin-common.install  kwin-common.lintian-overrides  kwin-data.install  kwin-dev.acc.in  kwin-dev.install  libkwineffects12.install  libkwineffects12.symbols  libkwinglutils12.install  libkwinglutils12.symbols  libkwinxrenderutils12.install  libkwinxrenderutils12.symbols
effects/: CMakeLists.txt  effect_builtins.cpp  effect_builtins.h  shaders.qrc
effects/mousepos/: CMakeLists.txt  mousepos.cpp  mousepos.h  mousepos.kcfg  mousepos_config.cpp  mousepos_config.desktop  mousepos_config.ui
effects/mousepos/data/1.10/: motion.vert
effects/mousepos/data/1.40/: motion.frag  motion.vert
manjaro/: .SRCINFO  PKGBUILD  README.md
src/: CMakeLists.txt  (+18 more)
src/effects/mousepos/: CMakeLists.txt  main.cpp  metadata.json  mousepos.cpp  mousepos.h  mousepos.qrc  mousepos_config.cpp  mousepos_config.h  mousepos_config.ui  mouseposconfig.kcfgc
src/effects/mousepos/data/1.40/: motion.frag
(+1268 files in other folders)
